added transitions and hover colors

--- a/selector.html
+++ b/selector.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="css selector.css">
 </head>
 <body>
+    <article class="main-text">
     <h1>helo</h1>
+    <h2>bob</h2>
+    </article>
     
 </body>
 </html>
