--- a/form.html
+++ b/form.html
@@ -29,21 +29,21 @@
 </head>
 <body>
     <h1>bamse form</h1>
-        <form action="http://httpbin.org/post" method="POST">
+        <form action="https://postman-echo.com/post" method="POST">
             <label for="first_name">First Name:</label>
             <input type="text" name="first_name" id="first_name">
 
-            <label for="username" class="for">Username:</label>
-            <input type="text" name="username" id="username" placeholder="username" required>
+            <label for="username" class="for">Username: (max 4char)</label>
+            <input type="text" name="username" id="username" placeholder="username" maxlength="4" required>
 
-            <label for="user_email">Email Address:</label>
+            <label for="user_email">Email Address: (required)</label>
             <input type="email" id="user_email" name="email" placeholder="your.email@here.com" required>
 
             <label for="password">password:</label>
             <input type="password" id="password" name="password" placeholder="password">
             
-            <label for="freetext">your lore:</label>
-            <textarea name="freetext" id="freetext" placeholder="enter whatever you want"></textarea>
+            <label for="freetext">your lore: (min 10 char)</label>
+            <textarea name="freetext" id="freetext" placeholder="enter whatever you want" minlength="10"></textarea>
 
             <!-- the "selected" attribute preselects that option -->
             <label>select your special perk and mount!</label>
@@ -85,5 +85,10 @@
         </form>
         <!-- "name="" attribute is like a variable for the backend" -->
          <!-- label becomes clickable when you select the for="" " -->
+
+        <dialog closed>
+            <h1>hello fam</h1>
+            <button type="sumbit">Close</button>
+        </dialog>
 </body>
 </html>
