--- a/Project 1. Sign-up Form/index.html
+++ b/Project 1. Sign-up Form/index.html
@@ -34,8 +34,8 @@
         </section>
         <!-- fix: image size, adjust section left of form, stack on top (w css), add bg bar behind logo -->
         <aside>
-            <img src="/Project 1. Sign-up Form/village-from-above.jpg" alt="an exotic village from above. Drone foto">
-            <img src="/Project 1. Sign-up Form/odin-lined-logo.png" alt="Odin logo">
+            <img class="village" src="/Project 1. Sign-up Form/village-from-above.jpg" alt="an exotic village from above. Drone foto">
+            <img class="odin-logo" src="/Project 1. Sign-up Form/odin-lined-logo.png" alt="Odin logo">
         </aside>
     </main>
 
