--- a/Project 1. Sign-up Form/index.html
+++ b/Project 1. Sign-up Form/index.html
@@ -9,8 +9,10 @@
 <body>
     <main>
         <section class="form-block">
-            <h1>We wont tell you what you are signing up for, and thats the fun part!</h1>
-            <h2>Only a whacko wouldn't sign up, what are you waiting for?</h2>
+            <header>
+                <h1>We wont tell you what you are signing up for, and thats the fun part!</h1>
+                <h2>Only a whacko wouldn't sign up, what are you waiting for?</h2>
+            </header>
             <form action="https://postman-echo.com/post" method="post">
                 <div class="inputs">
                     <label for="first_name">First Name</label>
@@ -19,9 +21,9 @@
                     <label for="last_name">Last Name</label>
                     <input type="text" name="last_name" id="last_name">
                     <label for="email">Email</label>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" placeholder="Loralie.123@email.com">
                     <label for="phone_number">Phone Number</label>
-                    <input type="number" name="phone_number" id="phone_number">
+                    <input type="tel" name="phone_number" id="phone_number">
                     <label for="password">Password</label>
                     <input type="password" name="password" id="password">
         
