--- a/Project 1. Sign-up Form/index.html
+++ b/Project 1. Sign-up Form/index.html
@@ -14,21 +14,37 @@
                 <h2>Only a whacko wouldn't sign up, what are you waiting for?</h2>
             </header>
             <form action="https://postman-echo.com/post" method="post">
+                <legend><p>Lets do this!</p></legend>
                 <div class="inputs">
-                    <label for="first_name">First Name</label>
-                    <input type="text" name="first_name" id="first_name">
+                    <div class="field">
+                        <label for="first_name">First Name</label>
+                        <input type="text" name="first_name" id="first_name">
+                    </div class="field">
         
-                    <label for="last_name">Last Name</label>
-                    <input type="text" name="last_name" id="last_name">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" placeholder="Loralie.123@email.com">
-                    <label for="phone_number">Phone Number</label>
-                    <input type="tel" name="phone_number" id="phone_number">
-                    <label for="password">Password</label>
-                    <input type="password" name="password" id="password">
-        
-                    <label for="confirm_password">Confirm Password</label>
-                    <input type="password" name="confirm_password" id="confirm_password">
+                    <div class="field">
+                        <label for="last_name">Last Name</label>
+                        <input type="text" name="last_name" id="last_name">
+                    </div class="field">
+
+                    <div class="field">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email" placeholder="Loralie.123@email.com">
+                    </div class="field">
+
+                    <div class="field">
+                        <label for="phone_number">Phone Number</label>
+                        <input type="tel" name="phone_number" id="phone_number">
+                    </div class="field">
+
+                    <div class="field">
+                        <label for="password">Password</label>
+                        <input type="password" name="password" id="password">
+                    </div class="field">
+
+                    <div class="field">
+                        <label for="confirm_password">Confirm Password</label>
+                        <input type="password" name="confirm_password" id="confirm_password">
+                    </div class="field">
                 </div>
                 <button type="submit">Submit</button>
             </form>
