--- a/Project 1. Sign-up Form/index.html
+++ b/Project 1. Sign-up Form/index.html
@@ -31,7 +31,7 @@
                         </div class="field">
                         <div class="field">
                             <label for="phone_number">Phone Number</label>
-                            <input type="tel" name="phone_number" id="phone_number">
+                            <input type="tel" name="phone_number" id="phone_number" pattern="\d{7,15}">
                         </div class="field">
                         <div class="field">
                             <label for="password">Password</label>
