changed image to a fern

--- a/Project 1. Sign-up Form/index.html
+++ b/Project 1. Sign-up Form/index.html
@@ -49,7 +49,7 @@
         </section>
         <!-- fix: image size, adjust section left of form, stack on top (w css), add bg bar behind logo -->
         <aside>
-            <img class="village" src="/Project 1. Sign-up Form/village-from-above.jpg" alt="an exotic village from above. Drone foto">
+            <img class="village" src="fern image.avif" alt="an exotic village from above. Drone foto">
             <img class="odin-logo" src="/Project 1. Sign-up Form/odin-lined-logo.png" alt="Odin logo">
         </aside>
     </main>
